--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -70,6 +70,7 @@ body{
   font-family: 'Lato', sans-serif;
   color: #ffffff;
   align-self: center;
+  font-family: 'Bebas Neue', cursive;
 }
 
 .questionBox {
