committing logo n stuff

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -19,7 +19,7 @@ body{
   border-radius: 12px;
 }
 .img{
-  height:700px;
+  height: 500px;
   border-radius: 25px;
 }
 .menuCon{
@@ -43,7 +43,6 @@ body{
   border: 1px solid rgba(0, 0, 0, 0.2);
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
-  padding: 10px;
   box-sizing: border-box;
   top: 0px;
   bottom: 0px;
@@ -56,11 +55,11 @@ body{
   position: relative;
   background-color: #303030;
   color: rgb(255, 255, 255);
-  padding: 20px;
   font-size: 4.8em;
   border-radius: 5px;
   text-align: center;
   font-family: 'Bebas Neue', cursive;
+  width: 100%;
 }
 
 .question {
