--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -6,11 +6,11 @@
 body{
   background-color: #000000;
   height:75%;
-  margin-top: -3%
+  
 }
 .btn{
   display: block;
-  width: 70%;
+  width: 65%;
   
   border: none;
   background-color: #FDE100;
@@ -23,8 +23,9 @@ body{
   
 }
 .img{
-  width: 70%;
+  width: 65%;
   border-radius: 25px;
+  margin-top: -5%;
 }
 
 .container {
@@ -41,18 +42,19 @@ body{
   right: 0px;
   margin: auto;
   text-align: center;
-  padding-top: 2%;
+  padding-top: 15%;
 }
 
 .title {
   position: relative;
-  background-color: #303030;
+
   color: rgb(255, 255, 255);
-  font-size: 3em;
+  font-size: 3.5em;
   border-radius: 5px;
   text-align: center;
   font-family: 'Bebas Neue', cursive;
   width: 70%;
+  height:30%;
   
   
 }
@@ -73,6 +75,10 @@ body{
   box-sizing: border-box;
   background-color: #303030;
   text-align: center;
+  width: 75%;
+  margin-left: 12.5%;
+  border-radius: 5px;
+  margin-top: 3%;
   
   
 }
@@ -89,12 +95,12 @@ body{
   margin: 10px;
   outline: none;
   border: none;
-  font-size: 1.8em;
+  font-size: 1.5em;
   color: #303030;
   font-weight: bold;
   border-radius: 4px;
   cursor: pointer;
-  
+  width: 75%;
 }
 
 .score-board {
@@ -127,6 +133,8 @@ body{
   margin: auto;
   outline: none;
   cursor: pointer;
+  margin-top: 2%;
+  margin-left: 60%;
 }
 
 
