--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -43,7 +43,7 @@ body{
   right: 0px;
   margin: auto;
   text-align: center;
-  padding-top: 12%;
+  padding-top: 5%;
 }
 
 .title {
@@ -62,7 +62,7 @@ body{
 }
 
 .question {
-  font-size: 2.4em;
+  font-size: 4em;
   font-weight: bold;
   margin-bottom: 5px;
   font-family: 'Lato', sans-serif;
@@ -77,8 +77,8 @@ body{
   box-sizing: border-box;
   background-color: #303030;
   text-align: center;
-  width: 75%;
-  margin-left: 12.5%;
+  width: 88%;
+  margin-left: 6%;
   border-radius: 5px;
   margin-top: 3%;
   
@@ -97,29 +97,26 @@ body{
   margin: 10px;
   outline: none;
   border: none;
-  font-size: 1.5em;
+  font-size: 2.5em;
   color: #303030;
   font-weight: bold;
   border-radius: 4px;
   cursor: pointer;
   width: 75%;
+  margin-bottom: 5%;
+  font-family: 'Lato';
 }
 
 .score-board {
   position: relative;
   height: 700px;
-  
   color: #FDE100;
   font-family: 'Bebas Neue', cursive;
-  width: 100%;
-}
-
-.score {
-  position: absolute;
-  width: 1024px;
-  font-size: 3em;
-  top: 250px;
+  font-size: 2em;
+  width: auto;
   text-align: center;
+  
+
 }
 
 .playBtn {
@@ -129,14 +126,15 @@ body{
   top: 350px;
   background-color: rgb(46, 182, 46);
   color: rgb(255, 255, 255);
-  width: 150px;
+  width: auto;
   left: 0px;
   right: 0px;
   margin: auto;
   outline: none;
   cursor: pointer;
   margin-top: 2%;
-  margin-left: 60%;
+  font-family: 'Lato';
+  
 }
 
 
