--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -69,6 +69,7 @@ body{
   color: #ffffff;
   align-self: center;
   font-family: 'Bebas Neue', cursive;
+  margin-top: 5%;
 }
 
 .questionBox {
@@ -78,10 +79,11 @@ body{
   background-color: #303030;
   text-align: center;
   width: 75%;
+  height: 500px;
   margin-left: 12.5%;
   border-radius: 5px;
   margin-top: 3%;
-  
+  padding-top: 5%;
   
 }
 .menuCon{
@@ -108,25 +110,25 @@ body{
 .score-board {
   position: relative;
   height: 700px;
-  
+  padding-left: 50%;
   color: #FDE100;
   font-family: 'Bebas Neue', cursive;
   width: 100%;
 }
 
 .score {
-  position: absolute;
-  width: 1024px;
+  
+  
   font-size: 3em;
   top: 250px;
-  text-align: center;
+  
 }
 
 .playBtn {
   position: absolute;
   font-size: 1.4em;
   padding: 10px;
-  top: 350px;
+
   background-color: rgb(46, 182, 46);
   color: rgb(255, 255, 255);
   width: 150px;
@@ -135,8 +137,12 @@ body{
   margin: auto;
   outline: none;
   cursor: pointer;
-  margin-top: 2%;
-  margin-left: 60%;
+ 
+  
+}
+.missedQuestionList{
+  font-size: 2.5em;
+  list-style-type: none;
 }
 
 
